Documentation improved Added checks for .set:N and .set_x:N properties

--- a/trunk/keys3-test.tex
+++ b/trunk/keys3-test.tex
@@ -36,7 +36,8 @@
 \ExplSyntaxOn
 
 \keys_define:nn { module } {
-  key .code:n = {You~said:~`#1'\\}
+  key .set:N = \l_tmpa_clist,
+  key .code:n = {You~said:~`#1'\\},
 }
 \ExplSyntaxOff
 
