--- a/trunk/keys3-test.tex
+++ b/trunk/keys3-test.tex
@@ -7,7 +7,8 @@
 % of errors are deliberately raised.
 
 \documentclass{article}
-\usepackage{keys3,xparse}
+\usepackage[T1]{fontenc}
+\usepackage{keys3,lmodern,xparse}
 \usepackage[parfill]{parskip}
 
 % The document commands for using keys is very simple.
@@ -255,7 +256,28 @@
   key = e
 }
 
-% Test nine: A completely unknown key should cause an error.
+% Test nine: 
+% ----------------------------------------------------------------------
+% \long macro:#1#2->
+% \long macro:#1#2->Hello `#1', you said `#2'.
+% ----------------------------------------------------------------------
+\ExplSyntaxOn
+\keys_define:nn { module } {
+  key .function:N = \module_function:nn
+}
+\ExplSyntaxOff
+
+\expandafter\meaning\csname module_function:nn\endcsname 
+
+\SetModuleKeys{
+  key = {Hello `#1', you said `#2'.}
+}
+
+\ExplSyntaxOn
+
+\expandafter\meaning\csname module_function:nn\endcsname 
+
+% Test ten: A completely unknown key should cause an error.
 % ----------------------------------------------------------------------
 % The key `module/unknown key' is unknown and is being ignored.
 % ----------------------------------------------------------------------
@@ -263,7 +285,7 @@
   unknown key = some value
 }
 
-% Test ten: If the special `unknown' key has been set up, however,
+% Test eleven: If the special `unknown' key has been set up, however,
 % unknown input can be re-directed.
 % ----------------------------------------------------------------------
 % You tried to set key `unknown key' to `some value'
