--- a/trunk/keys3.dtx
+++ b/trunk/keys3.dtx
@@ -1470,7 +1470,7 @@ This work consists of the file  keys3.dtx
 %\end{macro}
 %\end{macro}
 %
-%\begin{macro}{.meta:}
+%\begin{macro}{.meta:n}
 % Making a meta is handled internally.
 %    \begin{macrocode}
 \keys_property_new:nn { .meta:n } {
